Uploaded screenshots functionality

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,12 @@ SMTP_ENCRYPTION=tls
 
 # Steam settings
 STEAM_APIKEY=""
+
+# Twitter Bot settings
+TWITTERBOT_ENABLE=true
+TWITTERBOT_TAGS="#casualdesktopgame #cdgame #cdg #desktopdestroyer #indie #indiegame #gamer #gaming #videogame #gamedevelopment"
+TWITTERBOT_APIKEY=
+TWITTERBOT_APISECRET=
+TWITTERBOT_ACCESS_TOKEN=
+TWITTERBOT_ACCESS_TOKEN_SECRET=
+TWITTERBOT_CRONPW=test
