--- a/.env.example
+++ b/.env.example
@@ -43,8 +43,8 @@ STEAM_APIKEY=""
 # Twitter Bot settings
 TWITTERBOT_ENABLE=true
 TWITTERBOT_TAGS="#casualdesktopgame #cdgame #cdg #desktopdestroyer #indie #indiegame #gamer #gaming #videogame #gamedevelopment"
-TWITTERBOT_APIKEY=
-TWITTERBOT_APISECRET=
-TWITTERBOT_ACCESS_TOKEN=
-TWITTERBOT_ACCESS_TOKEN_SECRET=
+TWITTERBOT_APIKEY=""
+TWITTERBOT_APISECRET=""
+TWITTERBOT_ACCESS_TOKEN=""
+TWITTERBOT_ACCESS_TOKEN_SECRET=""
 TWITTERBOT_CRONPW=test
