Various small improvements

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ APP_SESSION=true
 APP_SHOWSTANDALONEDL=true
 APP_STANDALONEDLVER="1.0"
 APP_SCREENSHOTLIMIT=12
+APP_TWITTERHANDLE=
 
 # Database settings
 DB_ENABLE=false
