Use SteamWidgets to display game

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ APP_SHOWSTANDALONEDL=true
 APP_STANDALONEDLVER="1.0"
 APP_SCREENSHOTLIMIT=12
 APP_TWITTERHANDLE=
+APP_WIDGET_AUTHOR="By :developer"
 
 # Database settings
 DB_ENABLE=false
