--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,16 @@ APP_AUTHOR="Daniel Brendel"
 APP_CONTACT="dbrendel1988@gmail.com"
 APP_DEBUG=true
 APP_BASEDIR=""
-APP_SESSION=true
 APP_SHOWSTANDALONEDL=true
 APP_STANDALONEDLVER="1.0"
 APP_SCREENSHOTLIMIT=12
 APP_TWITTERHANDLE=
+APP_TIMEZONE=null
+
+# Session
+SESSION_ENABLE=true
+SESSION_DURATION=0
+SESSION_NAME=null
 
 # Database settings
 DB_ENABLE=false
@@ -28,6 +33,7 @@ DB_PASSWORD=""
 DB_PORT=3306
 DB_DATABASE=asatru
 DB_DRIVER=mysql
+DB_CHARSET="utf8"
 
 # SMTP settings
 SMTP_FROMNAME="Test"
