--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ APP_STANDALONEDLVER="1.0"
 APP_SCREENSHOTLIMIT=12
 APP_TWITTERHANDLE=
 APP_TIMEZONE=null
+APP_PARSESTEAMUSER=false
+APP_ENABLEDONATION=true
 
 # Session
 SESSION_ENABLE=true
