Mastodon bot base

--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,13 @@ SMTP_ENCRYPTION=tls
 # Steam settings
 STEAM_APIKEY=""
 
+# Mastodon Bot settings
+MASTODON_SERVER_INSTANCE="https://mastodon.social"
+MASTODON_CLIENT_KEY=""
+MASTODON_CLIENT_AUTH=""
+MASTODON_CLIENT_SECRET=""
+MASTODON_ACCESS_TOKEN=""
+
 # Twitter Bot settings
 TWITTERBOT_ENABLE=true
 TWITTERBOT_TAGS="#casualdesktopgame #cdgame #cdg #desktopdestroyer #indie #indiegame #gamer #gaming #videogame #gamedevelopment"
