Further mastodon bot progress

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ APP_SHOWSTANDALONEDL=true
 APP_STANDALONEDLVER="1.0"
 APP_SCREENSHOTLIMIT=12
 APP_TWITTERHANDLE=
+APP_MASTODONPROFILE=
 APP_TIMEZONE=null
 APP_PARSESTEAMUSER=false
 APP_ENABLEDONATION=true
@@ -50,15 +51,14 @@ SMTP_ENCRYPTION=tls
 STEAM_APIKEY=""
 
 # Mastodon Bot settings
-MASTODON_SERVER_INSTANCE="https://mastodon.social"
-MASTODON_CLIENT_KEY=""
-MASTODON_CLIENT_AUTH=""
-MASTODON_CLIENT_SECRET=""
-MASTODON_ACCESS_TOKEN=""
+MASTODONBOT_ENABLE=true
+MASTODONBOT_TAGS=""
+MASTODONBOT_SERVER_INSTANCE="https://mastodon.social"
+MASTODONBOT_CRONPW=test
 
 # Twitter Bot settings
 TWITTERBOT_ENABLE=true
-TWITTERBOT_TAGS="#casualdesktopgame #cdgame #cdg #desktopdestroyer #indie #indiegame #gamer #gaming #videogame #gamedevelopment"
+TWITTERBOT_TAGS=""
 TWITTERBOT_APIKEY=""
 TWITTERBOT_APISECRET=""
 TWITTERBOT_ACCESS_TOKEN=""
