Syntax highlighting & Fix Mastodon bot & Footer & News image

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,7 @@ STEAM_APIKEY=""
 MASTODONBOT_ENABLE=true
 MASTODONBOT_TAGS=""
 MASTODONBOT_SERVER_INSTANCE="https://mastodon.social"
+MASTODONBOT_ACCESS_TOKEN=""
 MASTODONBOT_CRONPW=test
 
 # Twitter Bot settings
