Add to example env

--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,10 @@ TWITTERBOT_APISECRET=""
 TWITTERBOT_ACCESS_TOKEN=""
 TWITTERBOT_ACCESS_TOKEN_SECRET=""
 TWITTERBOT_CRONPW=test
+
+# Links to resources
+LINK_STEAM="https://store.steampowered.com/app/1001860/Casual_Desktop_Game/"
+LINK_TWITTER="https://twitter.com/casualdeskgame"
+LINK_MASTODON="https://mastodon.social/@casual_desktop_game"
+LINK_INSTAGRAM="https://www.instagram.com/casualdesktopgame/"
+LINK_ITCHIO="https://danielbrendel.itch.io/casual-desktop-game"
