Add to example env

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ APP_SCREENSHOTLIMIT=12
 APP_TIMEZONE=null
 APP_PARSESTEAMUSER=false
 APP_ENABLEDONATION=true
+APP_SHOWCASEVIDEO=""
 
 # Session
 SESSION_ENABLE=true
