Dynamic platform management

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,9 @@ APP_TIMEZONE=null
 APP_PARSESTEAMUSER=false
 APP_ENABLEDONATION=true
 APP_SHOWCASEVIDEO=""
+APP_POSTSCREENS=false
+APP_POSTTAGS=""
+APP_CRONPW=test
 
 # Session
 SESSION_ENABLE=true
@@ -50,20 +53,14 @@ SMTP_ENCRYPTION=tls
 STEAM_APIKEY=""
 
 # Mastodon Bot settings
-MASTODONBOT_ENABLE=true
-MASTODONBOT_TAGS=""
 MASTODONBOT_SERVER_INSTANCE="https://mastodon.social"
 MASTODONBOT_ACCESS_TOKEN=""
-MASTODONBOT_CRONPW=test
 
 # Twitter Bot settings
-TWITTERBOT_ENABLE=true
-TWITTERBOT_TAGS=""
 TWITTERBOT_APIKEY=""
 TWITTERBOT_APISECRET=""
 TWITTERBOT_ACCESS_TOKEN=""
 TWITTERBOT_ACCESS_TOKEN_SECRET=""
-TWITTERBOT_CRONPW=test
 
 # Links to resources
 LINK_STEAM="https://store.steampowered.com/app/1001860/Casual_Desktop_Game/"
