--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
     "prefer-stable": true,
 	"require": {
         "php": "^8.0",
-		"danielbrendel/asatru-php-framework": "dev-main",
+		"danielbrendel/asatru-php-framework": "^1.5",
         "phpmailer/phpmailer": "^6.1",
-        "nesbot/carbon": "^2.0",
+        "nesbot/carbon": "^3.0",
         "erusev/parsedown": "^1.7",
         "guzzlehttp/guzzle": "^7.4",
         "abraham/twitteroauth": "^4.0"
