--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,11 @@ SMTP_ENCRYPTION=tls
 # Steam settings
 STEAM_APIKEY=""
 
+# Discord Bot settings
+DISCORDBOT_API_ENDPOINT=""
+DISCORDBOT_ACCESS_TOKEN=""
+DISCORDBOT_CHANNEL=""
+
 # Mastodon Bot settings
 MASTODONBOT_SERVER_INSTANCE="https://mastodon.social"
 MASTODONBOT_ACCESS_TOKEN=""
